# wildfire-m600-firefly

./: .gitignore  .gitmodules  .zshrc_onboard  50-velodyne-init.yaml  README.md  build_firefly.sh
Onboard-SDK-ROS-master/: ReadMe.md
core_autonomy_stack/core_behavior_executive/: CMakeLists.txt  README.md  package.xml
core_autonomy_stack/core_behavior_executive/include/core_behavior_executive/: behavior_executive_behavior_tree.h
core_autonomy_stack/core_behavior_executive/launch/: behavior_executive_behavior_tree.launch
core_autonomy_stack/core_behavior_executive/src/: behavior_executive_behavior_tree.cpp
core_autonomy_stack/core_dji_interface/: CMakeLists.txt  README.md  dji_interface_plugin.xml  package.xml
core_autonomy_stack/core_dji_interface/include/core_dji_interface/: dji_interface.h  px4_interface.h
core_autonomy_stack/core_dji_interface/src/: dji_interface.cpp  dji_sim_state_estimator.py  px4_interface.cpp
core_autonomy_stack/core_drone_interface/: CMakeLists.txt  README.md  package.xml
core_autonomy_stack/core_drone_interface/include/core_drone_interface/: drone_interface.h  drone_interface_node.h
core_autonomy_stack/core_drone_interface/launch/: drone_interface_node.launch
core_autonomy_stack/core_drone_interface/src/: drone_interface_node.cpp
core_autonomy_stack/core_drone_interface/srv/: DroneCommand.srv
core_autonomy_stack/core_gazebo_interface/: CMakeLists.txt  README.md  gazebo_interface_plugin.xml  package.xml
core_autonomy_stack/core_gazebo_interface/include/core_gazebo_interface/: gazebo_interface.h  gazebo_interface_node.h
core_autonomy_stack/core_gazebo_interface/launch/: gazebo_interface_node.launch
core_autonomy_stack/core_gazebo_interface/src/: gazebo_interface.cpp  gazebo_interface_node.cpp
core_autonomy_stack/core_odometry_transform/: CMakeLists.txt  README.md  package.xml
core_autonomy_stack/core_odometry_transform/include/core_odometry_transform/: odometry_transform.h
core_autonomy_stack/core_odometry_transform/launch/: odometry_transform.launch
core_autonomy_stack/core_odometry_transform/src/: odometry_transform.cpp
core_autonomy_stack/core_pid_controller/: CMakeLists.txt  package.xml
core_autonomy_stack/core_pid_controller/cfg/: PID.cfg
core_autonomy_stack/core_pid_controller/include/core_pid_controller/: pid_controller.h
core_autonomy_stack/core_pid_controller/msg/: DroneCommand.msg  PIDInfo.msg  Waypoint.msg
core_autonomy_stack/core_pid_controller/scripts/: pid_plot.py
core_autonomy_stack/core_pid_controller/src/: pid_controller.cpp
core_autonomy_stack/core_pointcloud_map_representation/: CMakeLists.txt  package.xml  pointcloud_map_representation_plugin.xml
core_autonomy_stack/core_pointcloud_map_representation/include/core_pointcloud_map_representation/: pointcloud_map_representation.h
core_autonomy_stack/core_pointcloud_map_representation/src/: fake_cloud.cpp  pointcloud_map_representation.cpp
core_autonomy_stack/core_pose_controller/: CMakeLists.txt  package.xml
core_autonomy_stack/core_pose_controller/launch/: pose_controller.launch  pose_controller_dji.launch  pose_controller_gazebo.launch  pose_controller_ignition.launch
core_autonomy_stack/core_pose_controller/src/: odometry_to_pose_stamped.py  pose_controller.cpp
core_autonomy_stack/core_takeoff_landing_planner/: CMakeLists.txt  package.xml
core_autonomy_stack/core_takeoff_landing_planner/include/core_takeoff_landing_planner/: takeoff_landing_planner.h
core_autonomy_stack/core_takeoff_landing_planner/launch/: takeoff_landing_planner.launch
core_autonomy_stack/core_takeoff_landing_planner/src/: takeoff_landing_planner.cpp
core_autonomy_stack/mav_comm/mav_system_msgs/: CMakeLists.txt
core_autonomy_stack/tictoc_profiler/: CMakeLists.txt  README.md  package.xml
core_autonomy_stack/tictoc_profiler/src/: example.cpp  profiler.cpp
firefly_calib/: CMakeLists.txt  README.md  package.xml
firefly_calib/imu_calib/: allan_variance.csv  config.yaml  imu.yaml
firefly_calib/imu_cam_calib/: camchain.yaml  imu.yaml  results.txt  target.yaml
firefly_calib/src/: detect_chessboard.cpp  intrinsic_calibration.cpp
firefly_control/: CMakeLists.txt  package.xml
firefly_control/config/: firefly.tree
firefly_control/include/: behavior_executive.h  simple_waypoint_test.h  takeoff_land_test.h  waypoint_mission.h
firefly_control/launch/: autonomy.launch
firefly_control/src/: behavior_executive.cpp  calculate_position_error.py  coverage_planner.cpp  coverage_planner.py  fixed_trajectory_generator.py  ipp_plan_to_trajectory.py  plot_coverage_planner.py  simple_waypoint_test.cpp  takeoff_land_test.cpp  waypoint_mission.cpp
firefly_mapping/: CMakeLists.txt  README.md  package.xml
firefly_mapping/config/: gps_hotspots.yaml  grid_map.yaml  map_params.yaml
firefly_mapping/launch/: grid_map_visualize.launch
firefly_mapping/msg/: ImageWithPose.msg
firefly_mapping/rviz/: gcs.rviz  terrain_eval.rviz  terrain_mapping.rviz
firefly_mapping/scripts/: 11_19_1.bag  11_20_1.bag  11_20_2.bag  mapping_test.py  terrain_accuracy.cpp
firefly_mapping/src/: gcs_mapping.cpp  gps_to_local.py  mapping_accuracy.cpp  onboard_mapping.cpp  onboard_mapping_test.cpp  terrain_mapping.cpp
firefly_mapping/test_data/test_poses/: down_at_30m.json  down_at_50m.json  slanted_at_30m.json  slanted_at_50m.json
firefly_perception/: CMakeLists.txt  package.xml
firefly_perception/src/: firefly_perception.cpp  firefly_perception_continuous.cpp  lidar_perception.cpp
firefly_telemetry/: CMakeLists.txt  package.xml
firefly_telemetry/mavlink_dialect/: firefly.xml  install_pymavlink.sh
firefly_telemetry/msg/: PolygonArray.msg
firefly_telemetry/src/: bwtest.py  gcs_telemetry.py  onboard_telemetry.py
firefly_telemetry/srv/: SetLocalPosRef.srv
firefly_viz/: CMakeLists.txt  package.xml  plugin_description.xml
firefly_viz/src/: FVD_mall.kml  firefly_gcs_polygon.py  firefly_panel.cpp  firefly_panel.h  gascola_nrec_coverage.kml  kml_file_to_poly_dict.py  polygon.npy  polygon.yaml  polygon_gascola.yaml  polygon_mall.yaml  sample.kml
pymavlink/: README.md  (+3 more)
(+209 files in other folders)
